k8s/02.backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xcall-backend
  namespace: learn
  labels: 
    app: xcall-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xcall-backend
  template:
    metadata:
      labels:
        app: xcall-backend
    spec:
      containers:
        - name: xcall-backend
          image: tuan1542/xcall-backend:v1.0.3
          ports:
            - containerPort: 80
